# codex-helper

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE.md  README.md  RELEASE.md  build-all.bat  build-installer.bat  build-zip.bat  build.rs  icon_render.rs
.github/workflows/: build-macos-dmg.yml  release.yml
installer/: CodexHelper.iss  USAGE-zh-CN.txt
installer/macos/: Info.plist
scripts/: build-all.bat  build-installer.bat  build-macos-release.sh  build-release.ps1  build-zip.bat  release-windows.ps1  release.bat
src/: actions.rs  cli.rs  commands.rs  env_sync.rs  icon.rs  macos_dialog.rs  main.rs  paths.rs  tray.rs
src/codex/: catalog.rs  computer_use.rs  desktop_state.rs  mod.rs
src/config/: mod.rs
src/logs/: api.rs  mod.rs  page.html  window.rs
src/provider/: codex_chat_reasoning.rs  mod.rs  models.rs  presets.rs
src/proxy/: chat_to_responses.rs  codex_tool_context.rs  logged_stream.rs  mod.rs  reasoning_options.rs  responses_failed.rs  responses_to_chat.rs  upstream_retry.rs
src/proxy/codex_compat/: codex_chat_common.rs  codex_chat_helpers.rs  json_canonical.rs  mod.rs  sse.rs  streaming_codex_chat.rs
src/request_log/: db.rs  mod.rs
src/settings/: api.rs  mod.rs  page.html  window.rs
