[package]
name = "codex-helper"
version = "0.1.0"
edition = "2021"
description = "轻量托盘代理，让 Codex CLI 一键切换 DeepSeek、通义千问等国产大模型"
license = "MIT"

[[bin]]
name = "codex-helper"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = { version = "0.8", features = ["json"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
ico = "0.3"
winres = "0.1"

[target.'cfg(windows)'.dependencies]
tray-icon = "0.21"
tao = { version = "0.34", default-features = false, features = ["rwh_06"] }
wry = "0.49"

[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.21"
tao = { version = "0.34", default-features = false, features = ["rwh_06"] }
wry = "0.49"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
opt-level = "z"
